--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "lucide-react": "^0.475.0",
     "next": "13.5.8",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
