--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.8",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-draggable": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "^20",
