--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
-    "react-draggable": "^4.4.6"
+    "react-draggable": "^4.4.6",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/node": "^20",
