--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
     "next": "13.5.8",
@@ -16,7 +18,8 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
-    "react-masonry-css": "^1.0.16"
+    "react-masonry-css": "^1.0.16",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
