--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.475.0",
     "next": "13.5.8",
     "qrcode.react": "^4.2.0",
@@ -32,7 +34,8 @@
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
