--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-masonry-css": "^1.0.16",
     "styled-components": "^6.1.15",
