--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "next": "13.5.8",
     "qrcode.react": "^4.2.0",
     "react": "^18",
