--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "antd": "^5.24.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
+    "babel-plugin-styled-components": "^2.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -30,10 +31,12 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-masonry-css": "^1.0.16",
-    "styled-components": "^6.1.15",
+    "replicate": "^1.0.1",
+    "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
