--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "babel-plugin-styled-components": "^2.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
     "html2canvas": "^1.4.1",
+    "is-mobile": "^5.0.0",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
