--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next": "13.5.8",
+    "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-clock": "^5.1.0",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.3.8",
