--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dockview-react": "^4.4.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
     "html2canvas": "^1.4.1",
@@ -34,6 +35,7 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-clock": "^5.1.0",
+    "react-device-frameset": "^1.3.4",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.3.8",
