--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.8.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "antd": "^5.24.0",
@@ -25,6 +27,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "is-mobile": "^5.0.0",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.475.0",
