--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-hover-card": "^1.1.14",
@@ -43,6 +44,7 @@
     "date-fns-tz": "^3.2.0",
     "dockview-react": "^4.4.0",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.4.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
@@ -66,6 +68,7 @@
     "react-icons": "^5.4.0",
     "react-masonry-css": "^1.0.16",
     "react-resizable-panels": "^3.0.4",
+    "recharts": "^3.1.2",
     "replicate": "^1.0.1",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.16",
