--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-icons": "^5.4.0",
     "react-masonry-css": "^1.0.16",
     "react-resizable-panels": "^3.0.4",
+    "react-simple-code-editor": "^0.14.1",
     "recharts": "^3.1.2",
     "replicate": "^1.0.1",
     "sonner": "^2.0.7",
